--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             <li>FAVORITE</li>
             <li>LIFESTYLE</li>
           </ul>
+          <ul>
+            <li>CATALOGUE</li>
+            <li>FASHION</li>
+            <li>FAVORITE</li>
+            <li>LIFESTYLE</li>
+          </ul>
           <button>Sign Up</button>
         </nav>
       </div>
